--- a/project/templates/base.html.twig
+++ b/project/templates/base.html.twig
@@ -1,19 +1,64 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
+        <title>{% block title %}Welcome!{% endblock %}</title>
+
+        {% block stylesheets %}
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,500i,600,600i&display=swap" rel="stylesheet" />
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <header class="header">
+            <nav class="navbar navbar-expand-xl navbar-light bg-light">
+                <div class="container mt-4 mb-3">
+                    <a class="navbar-brand mr-4 pr-2" href="{{ path('home') }}">
+                        &#128217; Tasker
+                    </a>
+
+                    
+
+                    <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#header-menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Show/Hide navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="header-menu">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item mr-3">
+                                {% if is_granted('ROLE_USER') %}
+                                 <a class="navbar-brand mr-4 pr-2" href="{{ path('user_profile') }}">
+                                    Profile
+                                 </a>
+                                {% endif %}
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+          
+        </header>
+
+        <main role="main" class="container mt-5">
+            {% block body %}{% endblock %}
+        </main>
+
+        <footer class="mt-4 px-3 py-5 text-center text-muted">
+            {% if is_granted('ROLE_USER') %}
+            <p>
+            <a href="{{ path('app_logout') }}" class="text-white">logout</a>            
+            </p>
+            {% endif %}
+            <p>
+                <a href="#" class="text-white">Back to top</a>
+            </p>
+        </footer>
+
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
     </body>
 </html>
