--- a/project/templates/home/index.html.twig
+++ b/project/templates/home/index.html.twig
@@ -3,18 +3,24 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+     <div class="row">
+            {% if is_granted('IS_ANONYMOUS') %} 
+                <div class="col-12 col-md-6 col-lg-3 mb-4">
+                    <div class="card border shadow lift">
+                        <div class="card-body">
+                            
+                           
+                           {{ render_esi("app_login") }}
+                         
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/Synphony project/Tasker/project/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/Synphony project/Tasker/project/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
+             {% if is_granted('ROLE_USER') %} 
+                    <h1 class="text-center">Bienvenue sur tasker une application qui va vous permettre de gérer vos projets</h1>
+              {% endif %}
+        </div>
+
 {% endblock %}
