--- a/project/templates/security/login.html.twig
+++ b/project/templates/security/login.html.twig
@@ -38,5 +38,10 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
+    <a href="{{ path('app_register') }}" class="btn btn-lg btn-primary text-black">Sign up</a>
 </form>
+    
+
+
+
 {% endblock %}
