Adding task and project

--- a/project/templates/conference/show.html.twig
+++ b/project/templates/conference/show.html.twig
@@ -12,7 +12,7 @@
             {% if comments|length > 0 %}
                 {% for comment in comments %}
                     <div class="media shadow border rounded-lg p-3 mb-4">
-                        <div class="comment-img mr-3">
+                        <div class="img-thumbnail rounded float-left">
                             {% if comment.photofilename %}
                                 <a href="{{ asset('uploads/photos/' ~ comment.photofilename) }}" target="_blank">
                                     <img src="{{ asset('uploads/photos/' ~ comment.photofilename) }}" />
