--- a/project/templates/user/index.html.twig
+++ b/project/templates/user/index.html.twig
@@ -1,20 +1,71 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+  <div class="container">
+      
+                    <div class="row">
+                       
+                         <div class="col-8 ">
+                            <div class="row">
+                            <h4 class="font-weight-light align-middle">
+                                Bienvenue {{ firstname}} {{lastname}}
+                                  <a href="{{ path('user_edit_profile') }}"
+                                class="btn btn-lg  font-weight-light">
+                                Edit Profile
+                                  </a>
+                            </h4>
+                            
+                            </div>
+                            <div class="row">
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            
+                           <form method="post" action="{{ path('project_add') }}">
+                                <input type="text" 
+                                       value="" 
+                                       name="name">
+                             <button class="btn btn-lg btn-primary" type="submit">
+                                Ajouter un Projet
+                            </button>
+                            </form>
+                            
+                            </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/Synphony project/Tasker/project/src/Controller/UserController.php'|file_link(0) }}">src/Controller/UserController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/Synphony project/Tasker/project/templates/user/index.html.twig'|file_link(0) }}">templates/user/index.html.twig</a></code></li>
-    </ul>
-</div>
+                        </div>
+                         <div class="col-2">
+                            {% if picture is not null %}
+                            <img src="{{ asset('uploads/profile-picture/' ~ picture) }}"
+                                class="img img-thumbnail rounded float-right"
+                            >
+                            {% endif %}
+                        </div>
+                    </div>  
+                   
+                   
+                <h5> Mes projets : {{nbProjects}}</h5>
+                <div class="row">
+                   
+                     {% for project in projects %}
+                        <div class="col-12 col-md-6 col-lg-3 mb-4">
+                            <div class="card border shadow lift">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        <h4 class="font-weight-light">
+                                            {{ project.name }}
+                                        </h4>
+                                    </div>
+                                    crée le {{ project.createdAt|date('Y-m-d') }}
+                                    <a href="{{ path('project_show', { slug: project.slug }) }}"
+                                    class="btn btn-sm stretched-link">
+                                     
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}  
+                </div>            
+
+
+    </div>
 {% endblock %}
